--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
+    <% flash.each do |key, value| %>
+     <div class="alert alert-<%= key %>" rule="alert"><%= value %></div>
+    <% end %>
+    
     <%= yield %>
+    
+    <script>
+      $(function(){
+        $(".alert").fadeOut(5000);
+      });
+    </script>
   </body>
 </html>
