--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -8,12 +8,15 @@
               <%= topic.user.name %>
             </h2>
             <%= image_tag topic.image.url %>
-            <% if !topic.favorite_users.include?(current_user) %>
-              <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
-                <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
+            <% if !topic.like_users.include?(current_user) %>
+              <%= link_to likes_path(topic_id: topic.id), method: :post do %>
+                <i class="far fa-heart like-btn" ></i>
+              <% end %>
+            <% else %>
+              <%= link_to likes_path(topic_id: topic.id), method: :delete do %>
+                <i class="fas fa-heart unlike-btn"></i>
               <% end %>
             <% end %>
-            <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
             <p class="topic-text">
               <%= topic.description %>
             </p>
