いいね課題

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -17,6 +17,7 @@
                 <i class="fas fa-heart unlike-btn"></i>
               <% end %>
             <% end %>
+            <%= topic.favorite_users.count %>
             <p class="topic-text">
               <%= topic.description %>
             </p>
