いいね課題テスト進捗

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -18,9 +18,15 @@
               <% end %>
             <% end %>
             <%= topic.favorite_users.count %>
+            <%= image_tag 'icons/comment.png', class:'topic-index-icon' %>
             <p class="topic-text">
               <%= topic.description %>
             </p>
+            <% topic.comments.each do |comment| %>
+              <div class="topic-text">
+                <%= comment.content %>
+              </div>
+            <% end %>
           </div>
         </div>
       </div>
