--- a/app/views/topics/_comments.html.erb
+++ b/app/views/topics/_comments.html.erb
@@ -7,9 +7,7 @@
     <br />
   <% end %>
   <% if logged_in? %>
-    <%= form_with model: topic.comments.new, url: comments_path do |f| %>
-      <%= f.hidden_field :topic_id, value: topic.id %>
-      <%= f.text_area :content, class: "form-control", rows: 5 %>
+    <%= form_with model: topic.comments.new, url: topic_comments_path(topic.id) do |f| %>
       <%= button_tag type: "submit", class: "btn btn-success float-right mt-1" do %>
         <i class="far fa-comments"></i>コメントする
       <% end %>
